# delist-detection

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
data/: delisted_tickers.tsv
docs/: data-flow.md  sample_delist_by_category.md
docs/research/: dlret-generation.md
docs/superpowers/plans/: 2026-05-27-bmp-firm-month-correction.md  2026-05-28-payout-extraction.md  2026-05-31-dlret-reconstruction.md
docs/superpowers/specs/: 2026-05-28-payout-extraction-design.md  2026-05-31-dlret-reconstruction-design.md
output/: delist_classifications.csv  dlret.csv  payouts.csv  web_verification.csv
scripts/: classify_universe.py  compute_corrected_returns.py  eval_merger_extractor.py  list_unknowns.py  regen_payout_fixtures.py  verify_against_web.py  verify_altair.py
src/delist_detection/: __init__.py  av_listing.py  bmp_correction.py  classifier.py  crsp_codes.py  dlret.py  edgar.py  exchanges.py  filing_selection.py  handling.py  llm_client.py  llm_merger_extractor.py  payout_extractor.py  qlib_adapter.py  raw_tiingo.py  reconstruction.py  ticker_resolver.py
tests/: conftest.py  test_bmp_correction.py  test_classifier.py  test_crsp_codes.py  test_dlret.py  test_edgar_filing_text.py  test_exchanges.py  test_firm_month_correction.py  test_handling.py  test_known_cases_bmp.py  test_llm_client.py  test_llm_merger_extractor.py  test_payout_extractor.py  test_payout_golden.py  test_qlib_adapter.py  test_qlib_adapter_bmp.py  test_raw_tiingo.py  test_reconstruction.py
tests/fixtures/: altr_8k_201.txt  atvi_8k_201.txt
