[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "delist_detection"
version = "0.1.0"
description = "Classify CRSP-style delisting reasons from SEC EDGAR for quant pipelines"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = ["requests>=2.31", "pandas>=2.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
